# snake-ai-genetic-algorithm

./: .gitignore  .gitmodules  README.md  pyproject.toml
snake_ai/: main.py  playback.py  player.py  settings.py  simulator.py  vision.py
