[tool.poetry]
name = "snake_ai_genetic_algorithm"
version = "0.1.0"
description = "Application of the genetic algorithm to the game Snake."
authors = ["RJW20"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pygame = "^2.5.2"
snake_app = { path = "snake_app/", develop = true }
genetic_algorithm = { path = "genetic_algorithm_template/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
